@@ -1,3 +1,12 @@
+24/02/2017
+
+Added:
+	zeroing function to BMP-1 IFV
+
+Fixed:
+	some issues related to BMP-1 IFV
+
+
 23/02/2017
 
 Fixed:
